[package]
name = "bl602-rust-example"
version = "0.1.0"
authors = ["9names"]
edition = "2018"

[dependencies]
riscv-rt = "0.10.0"
embedded-hal = "=1.0.0-alpha.5"
bl602-hal = { git = "https://github.com/sipeed/bl602-hal", rev="dfc9946e79ea4dac18be11efce11d0592a8517fb" }
panic-halt = "0.2.0"
riscv = "0.10.0"
embedded-time = "0.12.1"
nb = "1.0.0"

# You probably don't want to use a debug build, but lots of people accidentally do
# give the code at least a low level of optimization
[profile.dev]
codegen-units = 1
lto = true
opt-level = 1

# Different optimization level for dependencies in debug mode
# So you can keep the main code more debuggable and still save some space
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "z" # optimize for size instead of speed
