[package]
name = "bl602-rust-example"
version = "0.1.0"
authors = ["9names"]
edition = "2018"

[dependencies]
riscv-rt = "0.11.0"
embedded-hal = "=1.0.0-rc.3"
bl602-hal = { git = "https://github.com/sipeed/bl602-hal", rev="eeb35ff0db7e58a7e8dc47752982d220383369ba" }
panic-halt = "0.2.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
embedded-time = "0.12.1"
nb = "1.0.0"

# You probably don't want to use a debug build, but lots of people accidentally do
# give the code at least a low level of optimization
[profile.dev]
codegen-units = 1
lto = true
opt-level = 1
# need this or compiler-builtins breaks when building rust-std
overflow-checks = false

# Different optimization level for dependencies in debug mode
# So you can keep the main code more debuggable and still save some space
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "z" # optimize for size instead of speed
